# main.js
@@ -6,6 +6,7 @@ const swaggerUi = require("swagger-ui-express");
 const YAML = require("yamljs");
 const swaggerDocument = YAML.load("./swagger.yaml");
 const processors = require('./routes/processorRoutes');
+const brands = require('./routes/brandRoutes');
 const app = express();
 
 mongoose
@@ -16,6 +17,7 @@ mongoose
 app.use(cors());
 app.use(express.json());
 app.use('/api/processors', processors);
+app.use('/api/brands', brands);
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const port = process.env.PORT || 8000;
